static/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

html {
    background-color: rgb(245, 250, 255)
}

body {
    font-family: 'Open Sans', sans-serif;
}

header {
    background-color: #00508d;
}

nav {
    font-family: 'Courier New', Courier, monospace;
    background-color: #00508db6;
    backdrop-filter: blur(2px);
    transition: box-shadow 0.5s ease-in-out;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 99999;
}

.nav-scrolled {
    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.5);
}

nav .container {
    display: flex;
    justify-content: space-between;
}

nav ul {
    list-style-type: none;
    flex-grow: 1;
    text-align: right;
}

.navbar-logo {
    display: flex;
    align-items: center;
}

.navbar-logo img {
    width: auto;
    height: 60px;
    display: block;
}

nav ul li {
    display: inline-block;
    margin-left: 1rem;
}

nav ul li[selected=true],
nav ul li:hover {
    border-bottom: 6px solid #184190;
}

nav ul li a {
    color: #333;
    text-decoration: none;
    transition: text-decoration 0.1s ease;
}

.github-icon {
    margin-left: 2rem;
    display: flex;
    align-items: center;
}

.github-icon .inline-icon svg {
    min-width: 20px;
    color: #333;
}

#hero {
    min-height: 300px;
    background-color: #184190;
    background-image:
        radial-gradient(at 10% 60%, #5f59d5 0px, transparent 50%),
        radial-gradient(at 90% 80%, #feb500 0px, transparent 50%),
        radial-gradient(at 90% 10%, #ffffff 0px, transparent 50%);
    padding-top: 3rem;
    margin-bottom: 3rem;
    margin-top: 1rem;
    color: #eee;
    font-family: 'Raleway', sans-serif;
    padding-bottom: 2rem;
}

#hero h1 {
    font-size: 4rem;
    margin-bottom: 1rem;
}

#hero p {
    font-size: 1.2rem;
}

.container {
    max-width: 1000px;
    margin: 0 auto;
}

label {
    font-size: 18px;
}

select {
    margin: 2rem 2rem;
    min-width: 300px;
    padding: 0.5rem;
    border: 1px solid #184190;
    background-color: #fff;
}

#posts {
    margin: 2rem;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    grid-gap: 20px;
}

#paginator {
    display: flex;
    margin-top: 1rem;
}

#last-post {
    border-radius: 8px;
    overflow: hidden;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    max-width: 40%;
    min-width: 500px;
    margin: 1rem 0;
    background-color: #fff;
    position: relative;
    top: -7rem;
    margin: 0 auto;
    display: flex;
}

#last-post img {
    width: 100%;
    height: 250px;
    object-fit: cover;
}

#last-post-pic {
    min-width: 40%;
}

#posts-list {
    margin-top: -7rem;
}

.card {
    border-radius: 8px;
    overflow: hidden;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    max-width: 30%;
    min-width: 300px;
    margin: 1rem 0;
    background-color: #fff;
}

.card img {
    width: 100%;
    height: 200px;
    object-fit: cover;
}

.card-content {
    padding: 0.5rem 1.5rem 1.5rem 1.5rem;
}

.card-title {
    margin-top: 0;
    margin-bottom: 1rem;
    font-size: 1.3rem;
    font-weight: bold;
}

.card-title a,
.card-title a:visited {
    color: #184190;
    text-decoration: none;
}

.card-description {
    margin-bottom: 1rem;
    font-size: 1rem;
    line-height: 1.4;
}

.card-date {
    font-size: 0.7rem;
    border-bottom: 1px #ccc solid;
}

.card-tags span {
    background-color: #5f59d5;
    padding: 0.2rem 1rem;
    margin: 0.3rem 0;
    display: inline-block;
    border-radius: 1000px;
    color: #fff;
}

h6 {
    margin: 1.5rem 0 0.5rem 0;
    font-weight: 500;
}

article h1,
article h2,
article h3,
article h4,
article h5,
article h6 {
    color: #184190;
    margin-top: 3rem;
    font-family: 'Raleway', sans-serif;
    letter-spacing: 2px;
}

article h1 {
    margin-top: 5rem;
    letter-spacing: unset;
}

article a {
    color: #6bb61b;
}

.highlight pre {
    white-space: pre-wrap;
    word-break: break-word;
    font-size: 14px;
}

figure {
    margin: 0;
}

figure img {
    max-width: 100%;
}

figcaption h4 {
    font-weight: 300;
    text-align: center;
    font-size: 0.8rem;
    font-style: italic;
    margin-top: 0.5rem;
}

table {
    border-collapse: collapse;
    width: 100%;
}

td,
th {
    border: 1px solid #ddd;
    padding: 8px;
}

tr:nth-child(even) {
    background-color: #f2f2f2;
}

th {
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: #184190;
    color: white;
}

#article-page {
    display: flex;
    max-width: 1000px;
    margin: 0 auto;

    font-size: 18px;
    line-height: 1.5;
}

#article-sidebar {
    margin-top: 5rem;
    min-width: 15%;
    margin-left: 30px;
    padding: 0 2rem;
    font-size: 13px;
    color: #184190;
}

.article-info {
    font-size: 12px;
    color: #333;
    font-weight: 500;
    border-left: 5px solid #184190;
    padding: 0 2rem;
}

.svg-icon svg {
    color: #184190;
    max-width: 30px;
    margin: 0 0.5rem;
}

.svg-icon {
    text-decoration: none;
}

.svg-icon svg:hover {
    color: #5f59d5;
}

.inline-icon {
    display: inline-block;
}

.inline-icon svg {
    max-width: 10px;
    min-width: 10px;
}

footer {
    background-color: #00508db6;
    backdrop-filter: blur(2px);
    padding: 1rem;
    margin-top: 2rem;
    color: white;
    text-align: center;
    position: fixed;
    bottom: 0;
    width: 100%;
    transition: box-shadow 0.5s ease-in-out;
}

.footer-scrolled {
    box-shadow: 0 -5px 7px rgba(0, 0, 0, 0.5);
}

#inline-share {
    text-align: center;
    display: none;
    margin-top: 3rem;
}

.profile-img {
    width: 62px;
    height: 62px;
    border-radius: 50%;
}

@media only screen and (max-width: 600px) {
    .navbar-logo img {
        height: 50px;
    }

    nav ul {
        display: none;
    }

    #hero {
        padding: 2rem 4rem 2rem 2rem;
        min-height: unset;
        margin-bottom: unset;
    }

    #hero h1 {
        font-size: 2rem;
    }

    #hero p {
        font-size: 1rem;
    }

    #last-post {
        display: none;
    }

    #posts-list {
        margin-top: unset;
        padding: 1rem;
    }

    label {
        font-size: unset;
    }

    select {
        margin: unset;
        min-width: 100%;
        margin-top: 0.5rem;
        margin-bottom: 2rem;
    }

    .card {
        max-width: unset;
        min-width: unset;
    }

    #article-page {
        padding: 1rem;

        font-size: 16px;
        max-width: 100%;
    }

    #inline-share {
        display: block;
    }

    #article-sidebar {
        display: none;
    }
}

